[gd_scene load_steps=6 format=3 uid="uid://ouewrf04vgew"]

[ext_resource type="Texture2D" uid="uid://blm31flka15uf" path="res://assets/button_normal.png" id="1_8fyeu"]
[ext_resource type="Script" path="res://scenes/character_select.gd" id="1_rfkn8"]
[ext_resource type="Texture2D" uid="uid://bnls4pn3w7h55" path="res://assets/button_pressed.png" id="2_watxr"]
[ext_resource type="Texture2D" uid="uid://dncpwr38jxyti" path="res://assets/button_hover.png" id="3_h8isr"]
[ext_resource type="FontFile" uid="uid://lhct4cw0lk17" path="res://assets/font/LTCushion-Medium.ttf" id="4_ax7ne"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_rfkn8")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
offset_left = 1.0
offset_top = 144.0
offset_right = 401.0
offset_bottom = 392.0
metadata/_edit_group_ = true

[node name="Hesindian" type="TextureButton" parent="GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_8fyeu")
texture_pressed = ExtResource("2_watxr")
texture_hover = ExtResource("3_h8isr")

[node name="Label" type="Label" parent="GridContainer/Hesindian"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_ax7ne")
theme_override_font_sizes/font_size = 50
text = "Hesindian"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Leomara" type="TextureButton" parent="GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_8fyeu")
texture_pressed = ExtResource("2_watxr")
texture_hover = ExtResource("3_h8isr")

[node name="Label2" type="Label" parent="GridContainer/Leomara"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_ax7ne")
theme_override_font_sizes/font_size = 50
text = "Leomara"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Romoxosch" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_8fyeu")
texture_pressed = ExtResource("2_watxr")
texture_hover = ExtResource("3_h8isr")

[node name="Label3" type="Label" parent="GridContainer/Romoxosch"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_ax7ne")
theme_override_font_sizes/font_size = 50
text = "Romoxosch"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="GridContainer/Hesindian" to="." method="_on_hesindian_pressed"]
[connection signal="pressed" from="GridContainer/Leomara" to="." method="_on_leomara_pressed"]
[connection signal="pressed" from="GridContainer/Romoxosch" to="." method="_on_romoxosch_pressed"]
